# LFP_parser

./: pyproject.toml  readme.md
src/: __init__.py  processing.py
