[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LFP_parser"
version = "0.1.0"
description = "Utility for parsing LFP data"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",  # Required for handling parquet files
    # Installs your custom parser directly from its GitHub repository
    "perceptparser @ git+https://github.com/lizajivnani/percept_parser.git" 
]

[tool.setuptools.packages.find]
where = ["src"]
