[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LFP_parser"
version = "0.1.0"
description = "Utility for parsing LFP data"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "perceptparser" 
]

[tool.setuptools.packages.find]
where = ["src"]
